SERVER-78971 Skip shutting down Grid::getExecutorPool() when TestProctor is disabled